# Stock_VN

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  Dockerfile  GITHUB_ACTIONS_IPV4_FIX.md  README.md  config.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: collect-daily.yml  stock-collector.yml
scripts/: run_collect_daily.sh
src/stock_collector/: __init__.py  cli.py  config.py  scheduler.py
src/stock_collector/collectors/: base.py  financial.py  index.py  listing.py  price.py
src/stock_collector/db/: engine.py  models.py
